Radon - tried patsy and formulaic

--- a/Radon.ipynb
+++ b/Radon.ipynb
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complete_model.fit(X, y)"
+    "complete_model.fit(X, y)\n"
    ]
   },
   {
@@ -166,7 +166,8 @@
    "outputs": [],
    "source": [
     "infdata = az.from_cmdstanpy(unpooled.fitted_samples_)\n",
-    "infdata.posterior['beta_dim_0'] = form.common.as_dataframe().columns"
+    "infdata.posterior['beta_dim_0'] = form.common.as_dataframe().columns\n",
+    "infdata"
    ]
   },
   {
@@ -202,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50f5dac1-48e2-4479-ade0-f4ef93e99d67",
+   "id": "dcdfd68b-8900-4c65-b24c-69d91ed3e525",
    "metadata": {},
    "outputs": [],
    "source": []
