--- a/Radon.ipynb
+++ b/Radon.ipynb
@@ -21,6 +21,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import formulae\n",
+    "import scipy.sparse as sp\n",
     "import arviz as az"
    ]
   },
@@ -31,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "radon = pd.read_csv('https://raw.githubusercontent.com/stan-dev/example-models/cmdstanpy-case-study-1/jupyter/radon/data/mn_radon.csv')\n",
-    "counties = pd.read_csv('https://raw.githubusercontent.com/stan-dev/example-models/cmdstanpy-case-study-1/jupyter/radon/data/mn_counties.csv')"
+    "radon = pd.read_csv('https://raw.githubusercontent.com/stan-dev/example-models/master/jupyter/radon/data/mn_radon.csv')\n",
+    "counties = pd.read_csv('https://raw.githubusercontent.com/stan-dev/example-models/master/jupyter/radon/data/mn_uranium.csv')"
    ]
   },
   {
@@ -84,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complete_model = GLM(fit_intercept=False)"
+    "complete_model = GLM( save_log_lik=True)"
    ]
   },
   {
@@ -94,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "complete_model.fit(X, y)\n"
+    "complete_model.fit(X[:,1:], y)"
    ]
   },
   {
@@ -123,9 +124,19 @@
    "outputs": [],
    "source": [
     "form = formulae.design_matrices(\"log_radon ~ 0 + county:floor\", radon)\n",
-    "X = np.array(form.common)\n",
+    "X = sp.csc_matrix(np.array(form.common))\n",
     "y = np.array(form.response)\n",
     "form"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12f688ab-8123-4a59-8a74-ab4587a4021d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X"
    ]
   },
   {
@@ -135,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unpooled = GLM(fit_intercept=False)"
+    "unpooled = GLM(fit_intercept=False, save_log_lik=True)"
    ]
   },
   {
@@ -145,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unpooled.fit(X,y)"
+    "unpooled.fit(X, y)"
    ]
   },
   {
@@ -168,6 +179,16 @@
     "infdata = az.from_cmdstanpy(unpooled.fitted_samples_)\n",
     "infdata.posterior['beta_dim_0'] = form.common.as_dataframe().columns\n",
     "infdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ad29f28-c9ce-4f7b-90a7-f006bc768667",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.loo(infdata)"
    ]
   },
   {
@@ -197,13 +218,195 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(formulae.design_matrices('log_radon ~ 1 + (1|county)', radon).group)"
+    "x = (formulae.design_matrices('log_radon ~ 1 + (1|county)', radon))\n",
+    "x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dcdfd68b-8900-4c65-b24c-69d91ed3e525",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1s indicating which groups (county) each observation pertains to\n",
+    "# a one in i,j means the ith observation is in group j\n",
+    "np.array(x.group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb142862-ce1d-4deb-9eac-ec0facb3c625",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "formulae.design_matrices(\"log_radon ~ 0 + floor + log_uranium + (0 + floor|county)\", radon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e15c2e0-5dcf-4a31-94d2-acffc68e54e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y ~ BX + ZC\n",
+    "\n",
+    "\n",
+    "# C is 85x1\n",
+    "\n",
+    "# What is C? Priors?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2e4220d-2c0b-4118-88b7-9cea18d20bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f73b2aa1-83dd-4354-8ac4-66fbe62afbb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sucesses = np.random.randint(3,10, size=110)\n",
+    "trials = 13\n",
+    "failures = trials - sucesses\n",
+    "df = pd.DataFrame.from_dict({\"y\":sucesses,\n",
+    "                             \"ybar\": failures,\n",
+    "                            \"x\":np.concatenate([np.zeros(50), np.ones(60)])})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92643c1b-8675-4784-bc54-f99c0826791e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stack(x1, x2):\n",
+    "    return np.vstack([x1, x2]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6daf297d-8d33-49ed-9a54-9e700ec4d941",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stack(sucesses, failures)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60a9a486-32d2-40c2-ae38-8c71ae70ac3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(formulae.design_matrices(\"{stack(y, ybar)} ~ x\", df).response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1f6fcfa-a9e4-49bc-9093-45f59458694d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(formulae.design_matrices(\"{stack(y, ybar)} ~ x\", df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ec61358-da25-4584-afa5-5a6b9eedaeb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fae1f57-f629-45e8-9da1-533ff66c026e",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Roaches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c62582-a26b-41a5-b636-ac6b229b86c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "roaches = pd.read_csv('../roaches.csv')\n",
+    "form = formulae.design_matrices(\"y ~ {roach1 / 100} + treatment + senior)\", roaches)\n",
+    "X = np.array(form.common)\n",
+    "y = np.array(form.response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ecc049-f4f2-4601-a2fa-22194486cd9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_glm = GLM(fit_intercept=False, family=\"poisson\", link=\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f85e78-87c3-4f61-848b-db63d939aacf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r_glm.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af37382e-ebe0-4942-92ee-888ae74905bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loo1 = az.loo(az.from_cmdstanpy(r_glm.fitted_samples_))\n",
+    "loo1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff6fb25-c628-4493-a1ae-408e29b1d499",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.plot_khat(loo1, show_hlines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "919d6cc6-9922-43a4-8272-ceeb19b4bd1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05c2842a-56a6-4a26-b2ef-f215b13a49d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -225,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
